--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -9,7 +9,9 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.5.6",
     "express": "~4.13.1",
+    "html": "^1.0.0",
     "http2": "^3.3.6",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
