--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -9,6 +9,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "json": "^9.0.6",
+    "jsonp": "^0.2.1",
     "vue": "^2.3.3"
   },
   "devDependencies": {
